[package]
name = "radix-router"
version = "0.1.0"
edition = "2021"
authors = ["radix-router developers"]
description = "A high-performance radix tree based router for Rust"
license = "Apache-2.0"

[dependencies]
libc = "0.2"
regex = "1.10"
lru = "0.16.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bitflags = "2.4"

[build-dependencies]
cc = "1.0"

[dev-dependencies]
criterion ="0.7.0"

