[package]
name = "radix-router"
version = "0.1.0"
edition = "2021"
authors = ["radix-router developers"]
description = "High-performance HTTP router using Redis's radix tree (rax) with rich matching for paths, parameters, wildcards, methods, and hosts"
license = "Apache-2.0"
repository = "https://github.com/yourusername/radix-router"
keywords = ["router", "radix", "http", "redis", "web"]
categories = ["web-programming", "network-programming"]

[dependencies]
libc = "0.2"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bitflags = "2.4"
anyhow = "1.0.100"

[build-dependencies]
cc = "1.0"

[dev-dependencies]
criterion ="0.7.0"

