[package]
name = "router-radix"
version = "0.2.0"
edition = "2021"
authors = ["cj2a7t"]
description = "A high-performance radix tree based HTTP router for Rust"
license = "Apache-2.0"
repository = "https://github.com/cj2a7t/routerix"
keywords = ["router", "radix", "api-gateway"]

[dependencies]
libc = "0.2"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bitflags = "2.4"
anyhow = "1.0.100"

[build-dependencies]
cc = "1.0"

[dev-dependencies]
criterion ="0.7.0"

